normalize made code snippets text too big, fixed

--- a/index.css
+++ b/index.css
@@ -31,6 +31,7 @@ h3 {
 
 .prettyprint {
   text-align: left;
+  font-size: 14px;
 }
 
 .nocode {
